[package]
name = "deppy"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
eyre = "0.6.12"
log = "0.4.20"
serde = "1.0.196"
serde_yaml = "0.9.31"
